# fleet_adapter_template

./: .flake8
.github/workflows/: build_minimal.yml
fleet_adapter_template/: setup.py
fleet_adapter_template/fleet_adapter_template/: RobotClientAPI.py  fleet_adapter.py
fleet_adapter_template/test/: test_copyright.py  test_flake8.py
traffic_light_adapter_template/: README.md  config.yaml  package.xml  setup.cfg  setup.py
traffic_light_adapter_template/test/: test_copyright.py  test_flake8.py  test_pep257.py
traffic_light_adapter_template/traffic_light_adapter_template/: RobotClientAPI.py  fleet_adapter.py  traffic_light_command_handle.py
