<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_light_adapter_template</name>
  <version>0.0.0</version>
  <description>A template for an RMF Traffic Light fleet adapter</description>
  <maintainer email="Loke_Ji_Xian@cgh.com.sg">Ji Xian</maintainer>
  <maintainer email="Alis_Lin@cgh.com.sg">Alis</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>launch_xml</exec_depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-nudged</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>rmf_fleet_adapter_python</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
